Fix combination of whitespace and type selector.

--- a/src/scss/abstracts/functions/_strings.scss
+++ b/src/scss/abstracts/functions/_strings.scss
@@ -5,8 +5,12 @@
 @function str-replace($string, $token, $replace: "") {
 	$i: str-index($string, $token);
 
-	@if $i {
-		@return str-slice($string, 1, $i - 1) + $replace + str-replace(str-slice($string, $i + str-length($token)), $token, $replace);
+	@while (str-index($string, $token) != null) {
+		$first-part: str-slice($string, 1, ($i - 1));
+		$last-part: str-slice($string, ($i + str-length($token)));
+		$string: str-slice($string, 1, ($i - 1)) + $replace + $last-part;
+
+		$i: str-index($string, $token);
 	}
 
 	@return $string;
