--- a/src/scss/abstracts/mixins/_selectors.scss
+++ b/src/scss/abstracts/mixins/_selectors.scss
@@ -11,7 +11,7 @@
 			$string: str-replace($string, $token, " ");
 		}
 
-		$string: str-replace($string, "  ");
+		$string: str-replace($string, "  ", " ");
 
 		$selectors: str-parse($string, " ");
 
